Make sure to use Java7 for this older branch